--- a/ToDoAzure/ToDoAzure.csproj
+++ b/ToDoAzure/ToDoAzure.csproj
@@ -48,6 +48,9 @@
   <ItemGroup>
     <Compile Include="Data\Todo.cs" />
     <Compile Include="Data\TodoRepository.cs" />
+    <Compile Include="Design\GradientPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToDoForm.cs">
@@ -65,6 +68,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ToDoForm.resx">
+      <DependentUpon>ToDoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
