--- a/ToDoAzure/ToDoAzure.csproj
+++ b/ToDoAzure/ToDoAzure.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveTodos.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ActiveTodos.Designer.cs">
+      <DependentUpon>ActiveTodos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CompletedTodos.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CompletedTodos.Designer.cs">
+      <DependentUpon>CompletedTodos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Data\Todo.cs" />
     <Compile Include="Data\TodoRepository.cs" />
     <Compile Include="Design\GradientPanel.cs">
@@ -59,6 +71,12 @@
     <Compile Include="ToDoForm.Designer.cs">
       <DependentUpon>ToDoForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ActiveTodos.resx">
+      <DependentUpon>ActiveTodos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CompletedTodos.resx">
+      <DependentUpon>CompletedTodos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
